upd utils